modify menu with React hooks (useLocation, useNavigate) and add Cabinet bar initialization to improve user experience.

--- a/src/components/global/Header/index.css
+++ b/src/components/global/Header/index.css
@@ -1,4 +1,5 @@
-.main_header {
-    background-color: #1868db;
+.main_header{
+    color: white;
+    background-color: #002140;
     padding: 16px;
 }
