--- a/src/components/sheard/AuthProfileDropDown/index.css
+++ b/src/components/sheard/AuthProfileDropDown/index.css
@@ -1,3 +1,7 @@
-.user_profile_avatar {
-    cursor: pointer;
+.user_profile_avatar{
+cursor: pointer;
+}
+
+.profile_dropdown_container{
+    width: 200px;
 }
